@@ -1,3 +1,11 @@
+2008-01-08  Gordon Williams  <gordon.williams@collabora.co.uk>
+
+	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
+	Put brackets in the correct place so the EGLX pixmap is only renewed
+	when the fullscreen state has changed. Also added code to check the 
+	actor size and position against the X size and position and make sure 
+	it is the same - to fix bug #95594
+
 2009-01-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
